hphp/hack/test/typecheck/variablevariable_disallowed.php.exp
File "variablevariable_disallowed.php", line 6, characters 10-12:
Variable variables are not legal; all variable identifiers must be static strings. (Naming[2081])
