hphp/hack/test/typecheck/variablevariable_disallowed.php
<?hh // partial

function foo(): varray<int> {
  $n = 10;
  $x = "n";
  return $$x;
}
